@@ -8,7 +8,7 @@
     <groupId>org.camunda.bpm</groupId>
     <artifactId>camunda-database-settings</artifactId>
     <relativePath>../../database</relativePath>
-    <version>7.16.0-SNAPSHOT</version>
+    <version>7.17.0-SNAPSHOT</version>
   </parent>
 
   <properties>
@@ -138,7 +138,6 @@
                 <dependency>org.camunda.bpm:camunda-engine-spring</dependency>
             </dependenciesToScan>
             <redirectTestOutputToFile>true</redirectTestOutputToFile>
-            <argLine>-XX:MaxPermSize=160m -Xmx768m</argLine>
         </configuration>
       </plugin>
     </plugins>
